Make mechanical rotor the canonical RotorImpl and deprecate virtual rotor
- Created RotorImpl as the canonical implementation using mechanical column-rotation model
- Deprecated MechanicalRotor (now extends RotorImpl) for backward compatibility
- Moved VirtualRotor to enigma.machine.rotor.virtual package with @Deprecated annotation
- Updated Rotor interface with comprehensive documentation
- Updated RotorFactory interface with single create() method
- Updated RotorFactoryImpl with helper methods for building rotors
- Updated CodeFactory interface with single create() method
- Updated CodeFactoryImpl to use the new rotor path
- Updated Engine interface with single codeManual() method
- Updated EngineImpl to use mechanical rotor by default
- Updated test files to use new API
- Fixed Java 17 compatibility (getFirst/removeFirst/getLast)

Co-authored-by: y0ncha <8536651+y0ncha@users.noreply.github.com>